--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint --fix"
   },
   "dependencies": {
     "@hookform/resolvers": "^2.9.11",
@@ -35,9 +35,11 @@
     "zod": "^3.21.4"
   },
   "devDependencies": {
+    "@tailwindcss/line-clamp": "^0.4.2",
     "autoprefixer": "^10.4.13",
     "eslint": "^8.34.0",
     "eslint-kit": "^6.11.0",
+    "eslint-plugin-tailwindcss": "^3.10.1",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.2.6"
   }
