--- a/package.json
+++ b/package.json
@@ -25,10 +25,10 @@
     "clsx": "^1.2.1",
     "lucide-react": "^0.124.0",
     "next": "13.1.6",
-    "next-auth": "^4.20.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.5",
+    "react-query": "^3.39.3",
     "tailwind-merge": "^1.10.0",
     "tailwindcss-animate": "^1.0.5",
     "typescript": "4.9.5",
