--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@radix-ui/react-select": "^1.2.1",
     "@radix-ui/react-separator": "^1.0.2",
     "@radix-ui/react-tabs": "^1.0.3",
+    "@react-google-maps/api": "^2.18.1",
     "@types/node": "18.13.0",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
@@ -35,6 +36,7 @@
     "tailwind-merge": "^1.10.0",
     "tailwindcss-animate": "^1.0.5",
     "typescript": "4.9.5",
+    "use-places-autocomplete": "^4.0.0",
     "zod": "^3.21.4"
   },
   "devDependencies": {
